refactor(chat): 优化聊天流响应与商品推荐逻辑
- 重构 chatFluxRecommend 方法，调整返回类型为 Mono<Tuple2<Flux<String>, BigInteger>> 并简化逻辑
- 在聊天服务中整合工具调用输出，支持解析商品 JSON 流式输出格式
- 优化历史聊天记录格式拼接及首次对话提示模板使用
- 在聊天完成后异步保存聊天记录到 MongoDB，保证上下文用户存在时执行
- 增加聊天流响应中对工具调用商品数据的专门处理，确保完整商品信息输出
- 将 SimilarityThresholdStrategyConfiguration 和 ActiveSimilarityThresholdConfiguration 中阈值字段统一类型为 Double
- 调整数据表名和实体类对应关系，完善对应的 R2dbc Repository 接口
- 优化 ProductToolService 新增同步工具方法，用于根据商品ID列表阻塞拉取商品详细信息
- 在产品工具实现中新增阻塞获取商品列表接口，包含超时保护与异常捕获
- EmbeddingProductController 路径及接口方法调整，移除多余路径前缀简化接口路由
- RecommendTest 中完善和新增多种测试方法，使用 StepVerifier 验证响应数据流
- 移除无用导入和多余注释，格式化代码提升可读性
- 在 JsonUtils 中定义商品推荐助手模版，支持完整 JSON 商品信息格式的生成与解析
- ProductToolService 接口定义新增商品列表获取方法声明
- 修正部分注释与日志信息，改善代码注释内容和日志可读性